; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/kern/extr_misc.c_write_str.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/kern/extr_misc.c_write_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vsnprintf_closure = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.vsnprintf_closure*)* @write_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_str(i8* %0, %struct.vsnprintf_closure* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.vsnprintf_closure*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.vsnprintf_closure* %1, %struct.vsnprintf_closure** %4, align 8
  br label %5

5:                                                ; preds = %9, %2
  %6 = load i8*, i8** %3, align 8
  %7 = load i8, i8* %6, align 1
  %8 = icmp ne i8 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %5
  %10 = load i8*, i8** %3, align 8
  %11 = getelementptr inbounds i8, i8* %10, i32 1
  store i8* %11, i8** %3, align 8
  %12 = load i8, i8* %10, align 1
  %13 = sext i8 %12 to i32
  %14 = load %struct.vsnprintf_closure*, %struct.vsnprintf_closure** %4, align 8
  %15 = call i32 @write_char(i32 %13, %struct.vsnprintf_closure* %14)
  br label %5

16:                                               ; preds = %5
  ret void
}

declare dso_local i32 @write_char(i32, %struct.vsnprintf_closure*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
